<resources>
    <!-- titles -->
    <string name="app_name">WareHouseAndInventory</string>
    <string name="action_settings">Einstellung</string>
    <string name="action_csv_export">CSV Exportieren</string>

    <!-- labels -->
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Alle Produkte</string>
    <string name="second_fragment_label">Produkt bearbeiten</string>
    <string name="csv_export_label">CSV Exportieren</string>"
    <string name="barcode_activity_label">Barcode Scannen</string>


    <string name="next">Next</string>
    <string name="save_button">Speichern</string>
    <string name="break_button">Abbrechen</string>
    <string name="delete_button">Löschen</string>
    <string name="undo_button">RÜCKGÄNGIG</string>


    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_barcode">Barcode:</string>
    <string name="text_quantity">Anzahl:</string>
    <string name="text_description">Beschreibung:</string>
    <string name="text_name">Produktname:</string>

    <!--    Intent Strings-->
    <string name="intent_barcode">BARCODE</string>

    <!--    Toast Messages-->
    <string name="toast_product_saved">Produkt gespeichert</string>
    <string name="toast_product_deleted">Produkt %1$s gelöscht</string>
    <string name="toast_product_not_found">Produkt nicht gefunden</string>

    <!-- Error Messages -->
    <string name="error_empty_product_name">Produktname darf nicht leer sein!</string>
    <string name="error_empty_quantity">Anzahl darf nicht leer sein!</string>
    <string name="error_lower_null">Anzahl darf nicht kleiner Null sein!</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>


    <!-- CSV export fragment -->
    <string name="csv_export_title">CSV Exportieren</string>
    <string name="csv_export_description">Exportiert die Produkte in eine CSV Datei</string>
    <string name="export_to_csv">CSV Exportieren</string>
    <string name="include_csv_header">CSV Kopfzeile hinzufügen</string>
    <string name="no_products_to_export">Es gibt keine Produkte zum Exportieren</string>
    <string name="export_success">Exportiert in Datei: %1$s</string>
    <string name="export_failed">Exportieren fehlgeschlagen: %1$s</string>

</resources>