<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.open.warehouseandinventory.ProductListFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_product_list">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

        <action
            android:id="@+id/action_FirstFragment_to_CSVExportFragment"
            app:destination="@id/CSVExportFragment" />
    </fragment>

    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.open.warehouseandinventory.ProductFormFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_product_form">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/CSVExportFragment"
        android:name="com.open.warehouseandinventory.CSVExportFragment"
        android:label="@string/action_csv_export"
        tools:layout="@layout/fragment_csv_export" >
        <action
            android:id="@+id/action_CSVExportFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

</navigation>